# CoreOfInterpreter

./: .gitignore  README.md  pyproject.toml
notes/: bnf.txt  slice1.txt  slice2.txt  slice3.txt  slice4.txt
src/coreofintepreter/: generator.py  interpreter.py  lexer.py  main.py  parser.py  pratt.py  types.py  vm.py
